--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
 		<label for="date-s22">Date:</label>
 		<input type="date" name="date-s22" id="date-s22">
 		<p>Interests:</p>
-		<input type="checkbox" name="chkSports" id="chkSports">
-		<label for="chkSports">Sports</label>
-		<input type="checkbox" name="chkGames" id="chkGames">
-        <label for="chkGames">Games</label>
-		<input type="checkbox" name="chkReading" id="chkReading">
-        <label for="chkReading">Reading</label>
-		<input type="checkbox" name="chkCoding" id="chkCoding">
-        <label for="chkCoding">Coding</label>
-		<input type="checkbox" name="chkFriends" id="chkFriends">
-        <label for="chkFriends">Friends</label>
-		<input type="checkbox" name="chkCars" id="chkCars">
-                <label for="chkCars">Cars</label>
-		<input type="checkbox" name="chkTravel" id="chkTravel">
-                <label for="chkTravel">Travel</label>
-		<input type="submit" value="Submit" name="submit_button" id="submit_button">
+		<input type="checkbox" name="sports-s22" id="sports-s22">
+		<label for="sports-s22">Sports</label>
+		<input type="checkbox" name="games-s22" id="games-s22">
+        <label for="games-s22">Games</label>
+		<input type="checkbox" name="reading-s22" id="reading-s22">
+        <label for="reading-s22">Reading</label>
+		<input type="checkbox" name="coding-s22" id="coding-s22">
+        <label for="coding-s22">Coding</label>
+		<input type="checkbox" name="friends-s22" id="friends-s22">
+        <label for="friends-s22">Friends</label>
+		<input type="checkbox" name="cars-s22" id="cars-s22">
+        <label for="cars-s22">Cars</label>
+		<input type="checkbox" name="travel-s22" id="travel-s22">
+        <label for="travel-s22">Travel</label>
+		<input type="submit" value="Press Me" name="submit_button" id="submit_button">
 		</form>
 	</body>
 </html>
