--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<label for="address2-s22">Address2:</label>
         <input type="text" name="address2-s22" id="address2-s22">
 		<label for="city-s22">City:</label>
+		<input type="text" name="city-s22" id="city-s22">
 		<label for="state-s22">State:</label>
         <select name="state-s22" id="state-22">
 			<option value="AL">Alabama</option>
