--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		<input type="checkbox" name="travel-s22" id="travel-s22">
         <label for="travel-s22">Travel</label>
 		<input type="hidden" id="userid-s22" name="userid-s22" value="gibson26">
-		<input type="submit" value="Press Me" name="submit_button" id="submit_button">
+		<input type="submit" value="Press Me" name="submit_button-s22" id="submit_button-s22">
 		</form>
 	</body>
 </html>
