--- a/index.html
+++ b/index.html
@@ -83,20 +83,20 @@
 		<label for="date-s22">Date:</label>
 		<input type="date" name="date-s22" id="date-s22">
 		<p>Interests:</p>
-		<input type="checkbox" name="sports-s22" id="sports-s22">
-		<label for="sports-s22">Sports</label>
-		<input type="checkbox" name="games-s22" id="games-s22">
-        <label for="games-s22">Games</label>
-		<input type="checkbox" name="reading-s22" id="reading-s22">
-        <label for="reading-s22">Reading</label>
-		<input type="checkbox" name="coding-s22" id="coding-s22">
-        <label for="coding-s22">Coding</label>
-		<input type="checkbox" name="friends-s22" id="friends-s22">
-        <label for="friends-s22">Friends</label>
-		<input type="checkbox" name="cars-s22" id="cars-s22">
-        <label for="cars-s22">Cars</label>
-		<input type="checkbox" name="travel-s22" id="travel-s22">
-        <label for="travel-s22">Travel</label>
+		<input type="checkbox" name="interest-s22[]" id="interest-s22[]">
+		<label for="interest-s22[]">Sports</label>
+		<input type="checkbox" name="interest-s22[]" id="interest-s22[]">
+        <label for="interest-s22[]">Games</label>
+		<input type="checkbox" name="interest-s22[]" id="interest-s22[]">
+        <label for="interest-s22[]">Reading</label>
+		<input type="checkbox" name="interest-s22[]" id="interest-s22[]">
+        <label for="interest-s22[]">Coding</label>
+		<input type="checkbox" name="interest-s22[]" id="interest-s22[]">
+        <label for="interest-s22[]">Friends</label>
+		<input type="checkbox" name="interest-s22[]" id="interest-s22[]">
+        <label for="interest-s22[]">Cars</label>
+		<input type="checkbox" name="interest-s22[]" id="interest-s22[]">
+        <label for="interest-s22[]">Travel</label>
 		<input type="hidden" id="userid-s22" name="userid-s22" value="gibson26">
 		<input type="submit" value="Press Me" name="submit_button-s22" id="submit_button-s22">
 		</form>
