--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
 		<input type="date" name="date-s22" id="date-s22">
 		<p>Interests:</p>
 		<input type="checkbox" name="interest-s22[]" id="sports-s22" value="Sports">
-		<!-- <label for="interest-s22[]">Sports</label> -->
+		<label for="interest-s22[]">Sports</label>
 		<input type="checkbox" name="interest-s22[]" id="games-s22" value="Games">
-        <!-- <label for="interest-s22[]">Games</label >-->
+        <label for="interest-s22[]">Games</label>
 		<input type="checkbox" name="interest-s22[]" id="reading-s22" value="Reading">
-        <!-- <label for="interest-s22[]">Reading</label> -->
+        <label for="interest-s22[]">Reading</label>
 		<input type="checkbox" name="interest-s22[]" id="coding-s22" value="Coding">
-        <!-- <label for="interest-s22[]">Coding</label >-->
+        <label for="interest-s22[]">Coding</label>
 		<input type="checkbox" name="interest-s22[]" id="friends-s22" value="Friends">
-        <!-- <label for="interest-s22[]">Friends</label >-->
+        <label for="interest-s22[]">Friends</label>
 		<input type="checkbox" name="interest-s22[]" id="cars-s22" value="Cars">
-        <!-- <label for="interest-s22[]">Cars</label>-->
+        <label for="interest-s22[]">Cars</label>
 		<input type="checkbox" name="interest-s22[]" id="travel-s22" value="Travel">
-        <!-- <label for="interest-s22[]">Travel</label> -->
+        <label for="interest-s22[]">Travel</label>
 		<input type="hidden" id="userid-s22" name="userid-s22" value="gibson26">
 		<input type="submit" value="Press Me" name="submit_button-s22" id="submit_button-s22">
 		</form>
