--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Jordan Gibson Lab 5</title>
 	</head>
 	<body>
 		<form action="https://ceclnx01.cec.miamioh.edu/~johnsok9/cse383/lab5s22.php" method="post">
 		<label for="name-s22">Name:</label>
-		<input type="text" name="name-s22"id="name-s22">
+		<input type="text" name="name-s22" id="name-s22"><br>
 		<label for="address1-s22">Address:</label>
-		<input type="text" name="address1-s22" id="address1-s22">
+		<input type="text" name="address1-s22" id="address1-s22"><br>
 		<label for="address2-s22">Address2:</label>
-        <input type="text" name="address2-s22" id="address2-s22">
+        <input type="text" name="address2-s22" id="address2-s22"><br>
 		<label for="city-s22">City:</label>
-		<input type="text" name="city-s22" id="city-s22">
+		<input type="text" name="city-s22" id="city-s22"><br>
 		<label for="state-s22">State:</label>
         <select name="state-s22" id="state-22">
 			<option value="AL">Alabama</option>
@@ -66,37 +66,37 @@
 			<option value="WV">West Virginia</option>
 			<option value="WI">Wisconsin</option>
 			<option value="WY">Wyoming</option>
-		</select>
+		</select><br>
 		<label for="zipcode-s22">Zip:</label>
-        <input type="number" name="zipcode-s22" id="zipcode-s22">
+        <input type="number" name="zipcode-s22" id="zipcode-s22"><br>
 		<p>Class Level:</p>
 		<label for="1">1</label>
-		<input type="radio" name="classLevel-s22" id="1" value="1">
+		<input type="radio" name="classLevel-s22" id="1" value="1"><br>
 		<label for="2">2</label>
-        <input type="radio" name="classLevel-s22" id="2" value="2">
+        <input type="radio" name="classLevel-s22" id="2" value="2"><br>
 		<label for="3">3</label>
-        <input type="radio" name="classLevel-s22" id="3" value="3">
+        <input type="radio" name="classLevel-s22" id="3" value="3"><br>
 		<label for="4">4</label>
-        <input type="radio" name="classLevel-s22" id="4" value="4">
+        <input type="radio" name="classLevel-s22" id="4" value="4"><br>
 		<label for="5">5</label>
-        <input type="radio" name="classLevel-s22" id="5" value="5">
+        <input type="radio" name="classLevel-s22" id="5" value="5"><br>
 		<label for="date-s22">Date:</label>
-		<input type="date" name="date-s22" id="date-s22">
+		<input type="date" name="date-s22" id="date-s22"><br>
 		<p>Interests:</p>
 		<input type="checkbox" name="interest-s22[]" id="sports-s22" value="Sports">
-		<label for="interest-s22[]">Sports</label>
+		<label for="sports-s22">Sports</label><br>
 		<input type="checkbox" name="interest-s22[]" id="games-s22" value="Games">
-        <label for="interest-s22[]">Games</label>
+        <label for="games-s22">Games</label><br>
 		<input type="checkbox" name="interest-s22[]" id="reading-s22" value="Reading">
-        <label for="interest-s22[]">Reading</label>
+        <label for="reading-s22">Reading</label><br>
 		<input type="checkbox" name="interest-s22[]" id="coding-s22" value="Coding">
-        <label for="interest-s22[]">Coding</label>
+        <label for="coding-s22">Coding</label><br>
 		<input type="checkbox" name="interest-s22[]" id="friends-s22" value="Friends">
-        <label for="interest-s22[]">Friends</label>
+        <label for="friends-s22">Friends</label><br>
 		<input type="checkbox" name="interest-s22[]" id="cars-s22" value="Cars">
-        <label for="interest-s22[]">Cars</label>
+        <label for="cars-s22">Cars</label><br>
 		<input type="checkbox" name="interest-s22[]" id="travel-s22" value="Travel">
-        <label for="interest-s22[]">Travel</label>
+        <label for="travel-s22">Travel</label><br>
 		<input type="hidden" id="userid-s22" name="userid-s22" value="gibson26">
 		<input type="submit" value="Press Me" name="submit_button-s22" id="submit_button-s22">
 		</form>
