--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="text" name="address2-s22" id="address2-s22"><br>
 		<label for="city-s22">City:</label>
 		<input type="text" name="city-s22" id="city-s22"><br>
-		<label for="state-s22">State:</label>
+		<p>State:</p>
         <select name="state-s22" id="state-22">
 			<option value="AL">Alabama</option>
 			<option value="AK">Alaska</option>
