--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		</select><br>
 		<label for="zipcode-s22">Zip:</label>
         <input type="number" name="zipcode-s22" id="zipcode-s22"><br>
-		<p>Class Level:</p>
+		<label>Class Level:</label>
 		<label for="1">1</label>
 		<input type="radio" name="classLevel-s22" id="1" value="1"><br>
 		<label for="2">2</label>
@@ -82,7 +82,7 @@
         <input type="radio" name="classLevel-s22" id="5" value="5"><br>
 		<label for="date-s22">Date:</label>
 		<input type="date" name="date-s22" id="date-s22"><br>
-		<p>Interests:</p>
+		<label>Interests:</label>
 		<input type="checkbox" name="interest-s22[]" id="sports-s22" value="Sports">
 		<label for="sports-s22">Sports</label><br>
 		<input type="checkbox" name="interest-s22[]" id="games-s22" value="Games">
