--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="text" name="address2-s22" id="address2-s22"><br>
 		<label for="city-s22">City:</label>
 		<input type="text" name="city-s22" id="city-s22"><br>
-		<label>State:</label>
+		<p>State:</p>
         <select name="state-s22" id="state-22">
 			<option value="AL">Alabama</option>
 			<option value="AK">Alaska</option>
@@ -82,7 +82,7 @@
         <input type="radio" name="classLevel-s22" id="5" value="5"><br>
 		<label for="date-s22">Date:</label>
 		<input type="date" name="date-s22" id="date-s22"><br>
-		<label>Interests:</label>
+		<p>Interests:</p>
 		<input type="checkbox" name="interest-s22[]" id="sports-s22" value="Sports">
 		<label for="sports-s22">Sports</label><br>
 		<input type="checkbox" name="interest-s22[]" id="games-s22" value="Games">
