--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Jordan Gibson Lab 5</title>
+		<link rel="stylesheet" href="lab5.css">
 	</head>
 	<body>
 		<form action="https://ceclnx01.cec.miamioh.edu/~johnsok9/cse383/lab5s22.php" method="post">
