--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <input type="radio" name="classLevel-s22" id="5" value="5"><br>
 		<label for="date-s22">Date:</label>
 		<input type="date" name="date-s22" id="date-s22"><br>
-		<label class="break">Interests:</p>
+		<label class="break">Interests:</label>
 		<input type="checkbox" name="interest-s22[]" id="sports-s22" value="Sports">
 		<label for="sports-s22">Sports</label><br>
 		<input type="checkbox" name="interest-s22[]" id="games-s22" value="Games">
