--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</select><br>
 		<label for="zipcode-s22">Zip:</label>
         <input type="number" name="zipcode-s22" id="zipcode-s22"><br>
-		<label class="break">Class Level:</label>
+		<label class="break center">Class Level:</label>
 		<label for="1">1</label>
 		<input type="radio" name="classLevel-s22" id="1" value="1"><br>
 		<label for="2">2</label>
@@ -81,9 +81,9 @@
         <input type="radio" name="classLevel-s22" id="4" value="4"><br>
 		<label for="5">5</label>
         <input type="radio" name="classLevel-s22" id="5" value="5"><br>
-		<label for="date-s22">Date:</label>
+		<label for="date-s22" class="center">Date:</label>
 		<input type="date" name="date-s22" id="date-s22"><br>
-		<label class="break">Interests:</label>
+		<label class="break center">Interests:</label>
 		<input type="checkbox" name="interest-s22[]" id="sports-s22" value="Sports">
 		<label for="sports-s22">Sports</label><br>
 		<input type="checkbox" name="interest-s22[]" id="games-s22" value="Games">
